force-app/main/default/objects/Account/fields/Favorite_Country__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Country__c</fullName>
    <label>Favorite Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>