force-app/main/default/objects/Account/fields/Infinity_Stone_Spotted__c.field-meta.xml
<CustomField>
    <fullName>Infinity_Stone_Spotted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infinity Stone Spotted</label>
    <type>Checkbox</type>
</CustomField>