force-app/main/default/objects/Account/fields/Last_Known_Alias__c.field-meta.xml
<CustomField>
    <fullName>Last_Known_Alias__c</fullName>
    <label>Last Known Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>