force-app/main/default/objects/Account/fields/Operations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Operations_Notes__c</fullName>
    <label>Operations Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>