force-app/main/default/objects/Account/fields/Supervisor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Notes__c</fullName>
    <description>Notes from the Supervisor</description>
    <label>Supervisor Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>