force-app/main/default/objects/Account/fields/Threat_Assessed_Date__c.field-meta.xml
<CustomField>
    <fullName>Threat_Assessed_Date__c</fullName>
    <label>Threat Assessed Date</label>
    <type>Date</type>
</CustomField>