force-app/main/default/objects/Account/fields/Threat_Confined__c.field-meta.xml
<CustomField>
    <fullName>Threat_Confined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Threat Confined</label>
    <type>Checkbox</type>
</CustomField>