force-app/main/default/objects/Account/fields/Threat_Level__c.field-meta.xml
<CustomField>
    <fullName>Threat_Level__c</fullName>
    <inlineHelpText>Start Industries threat</inlineHelpText>
    <label>Threat Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Call Captain Marvel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>