force-app/main/default/objects/Account/fields/Threat_Percent__c.field-meta.xml
<CustomField>
    <fullName>Threat_Percent__c</fullName>
    <label>Threat Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>